# alg-calc

./: .gitignore  .gitlab-ci.yml  README.txt  Readme.md  Readme.txt  entry.py  main.tex  setup.cfg  setup.py  shisis README.md  todo.txt
.github/workflows/: codelint.yml  tests.yml
alg-calc/: Main.py  __main__.py  classes.py  utils.py
alg-calc/Zeilen Zählen/: Zeilen Zählen.bat
alg_calc/: __main__.py  alg.py  calc.py  classes.py  colored.py  display.py  entry.py  settings.py  stdlib.py  utils.py
alg_calc/alg_calc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
alg_calc/resources/: config.json
cloc/: cloc.bat
tests/: conftest.py
