[metadata]
name = alg_calc
description = Analytische Geometrie + Gauss @ TUI – INET || 411364 ✨💖
author = Emily Aurelia Seebeck [411364]
author_email = emily.seebeck@tu-berlin.de

license = AGPL3
license_file = LICENSE
readme = "README.txt"

platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14


[options]

python_requires = >=3.10
zip_safe = False
include_package_data = True
package_dir =
  = alg_calc

# --- Packages ---

[options.extras_require]
testing =
    pytest~=9.0.3
    pytest-cov~=7.1.0
    pytest-asyncio~=1.3.0
    mypy~=1.20.0
    flake8~=7.3.0

    twine~=6.2.0
    build~=1.4.3
    radon~=6.0.1



# -/- Packages

[options.entry_points]
console_scripts =
    alg_calc = alg_calc.entry.py:start

# --- Do you want resources to be included in the distributed package?

# [options.package_data]
# TODO = resources/**

### -/-

# --- Linters ---

[flake8]
max-line-length = 500

[mypy]
strict = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

implicit_optional = false
strict_optional = true

warn_redundant_casts = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

show_error_context = true
show_column_numbers = true
pretty = true
color_output = true
